progress on lists

--- a/scrummd/templates/default_md.j2
+++ b/scrummd/templates/default_md.j2
@@ -8,9 +8,16 @@ break those functions.
 {%- for block in groups -%}
 {%- if block[0].name == "PROPERTY_BLOCK" -%}
 ---
-{% for property_name in block[1] -%}
-{{meta[property_name].raw_field_name}}: {{card.get_field(property_name)}}
+{%- for property_name in block[1] %}
+{%- if meta[property_name].md_type.name == "PROPERTY_LIST" %}
+{{meta[property_name].raw_field_name}}: 
+{%- for value in card.get_field[property_name] -%}
+  - {{value}}
 {% endfor -%}
+{%- else %}
+{{meta[property_name].raw_field_name}}: {{card.get_field(property_name)}}
+{%- endif -%}
+{% endfor %}
 ---
 
 {% elif block[0].name == "HEADER_BLOCK" %}
@@ -20,5 +27,13 @@ break those functions.
 {{card.get_field(field)}}
 
 {% endfor %}
-{%- endif -%}
+{%- elif block[0].name == "IMPLICIT_SUMMARY" %}
+# {{ card.summary }}
+
+{%- elif meta[property_name].md_type.name == "HEADER_LIST" %}
+{%- for value in card.get_field[property_name] -%}
+  - {{value}}
+{% endfor -%}
+
+{% endif -%}
 {% endfor -%}
