cli046 Fix to scard template with lists

--- a/scrummd/templates/default_scard.j2
+++ b/scrummd/templates/default_scard.j2
@@ -33,9 +33,10 @@
         {%- endif -%}
     {%- elif value is number -%}
 {{ HEADER }}{{ key }}{{ RESET }}: {{ "%.2f"|format(value) }}
-    {%- elif value is iterable -%}
+    {%- elif value is iterable %}
+{{ HEADER }}# {{ key }}{{ RESET }}
         {% for item in value %}
-- {{ item }}
+  - {{ item -}}
         {% endfor %}
     {% endif %}
 {% endfor %}
